--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tsnd --respawn --clear src/server.ts",
     "build": "rimraf ./dist && tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "express": "^4.18.3",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "rimraf": "^6.0.1",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
