--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/socket.io": "^3.0.2",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.3"
   },
   "keywords": [],
   "author": "",
